--- a/style.css
+++ b/style.css
@@ -1,1 +1,85 @@
+* {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+header {
+  background-color: #0e69f8;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: 100vh;
+  position: relative;
+}
+
+header div:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em 0;
+  width: 60%;
+  margin: 0 auto;
+}
+
+header div:first-child h1 {
+  font-size: 1.3em;
+  color: white;
+}
+
+header div:first-child button {
+  font-size: 1em;
+  background-color: rgb(26, 63, 157);
+  border: none;
+  padding: 20px 50px;
+  border-radius: 5px;
+}
+
+header div:first-child button a {
+  color: white;
+  text-decoration: none;
+}
+
+header div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 20em;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+header div:nth-child(2) h2 {
+  font-size: 4.2em;
+  max-width: 50%;
+  color: white;
+  text-align: center;
+}
+
+header div:nth-child(2) button {
+  font-size: 1em;
+  background-color: rgb(26, 63, 157);
+  border: none;
+  padding: 20px 50px;
+  border-radius: 5px;
+}
+
+header div:nth-child(2) button a {
+  color: white;
+  text-decoration: none;
+}
+
+header div:last-child {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: -30%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+header div:last-child img {
+  max-width: 900px;
+  height: auto;
+}
