--- a/style.css
+++ b/style.css
@@ -7,6 +7,47 @@
 
 button {
   cursor: pointer;
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  background-color: #1a3f9d;
+  border: none;
+  border-radius: 5px;
+  padding: 20px 50px;
+  font-size: 1em;
+}
+
+button a {
+  color: white !important;
+}
+
+button:hover {
+  background-color: white;
+  transition: 0.7s;
+}
+
+button:hover a {
+  color: #1a3f9d !important;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+a:visited {
+  color: inherit;
+}
+
+a:hover,
+a:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+a:active {
+  text-decoration: none;
+  color: inherit;
 }
 
 .section-icon-container {
@@ -43,15 +84,113 @@ button {
   mask-size: contain;
 }
 
+.features-section-icon-container {
+  display: inline-block;
+  padding: 30px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 30px -2px #8a19fa;
+  margin-bottom: 1em;
+}
+
+.features-section-icon {
+  width: 15px; /* Tamaño del ícono */
+  height: 15px;
+  background-color: white; /* Fondo morado */
+}
+
+/* In order */
+
+.one,
+.eight {
+  background-color: #1980fa;
+  box-shadow: 0 0 30px -2px #1980fa;
+}
+
+.one .features-section-icon {
+  -webkit-mask: url('assets/icons/layers.svg') no-repeat center;
+  mask: url('assets/icons/layers.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.two,
+.seven {
+  background-color: #faa719;
+  box-shadow: 0 0 30px -2px #faa719;
+}
+
+.two .features-section-icon {
+  -webkit-mask: url('assets/icons/live-support.svg') no-repeat center;
+  mask: url('assets/icons/live-support.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.three,
+.six {
+  background-color: #19b5fa;
+  box-shadow: 0 0 30px -2px #19b5fa;
+}
+
+.three .features-section-icon {
+  -webkit-mask: url('assets/icons/ui-browser.svg') no-repeat center;
+  mask: url('assets/icons/ui-browser.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.four,
+.five {
+  background-color: #8a19fa;
+  box-shadow: 0 0 30px -2px #8a19fa;
+}
+
+.four .features-section-icon {
+  -webkit-mask: url('assets/icons/certificate-alt-1.svg') no-repeat center;
+  mask: url('assets/icons/certificate-alt-1.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.five .features-section-icon {
+  -webkit-mask: url('assets/icons/paper.svg') no-repeat center;
+  mask: url('assets/icons/paper.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.six .features-section-icon {
+  -webkit-mask: url('assets/icons/lamp-light.svg') no-repeat center;
+  mask: url('assets/icons/lamp-light.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.seven .features-section-icon {
+  -webkit-mask: url('assets/icons/certificate.svg') no-repeat center;
+  mask: url('assets/icons/certificate.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
+.eight .features-section-icon {
+  -webkit-mask: url('assets/icons/education.svg') no-repeat center;
+  mask: url('assets/icons/education.svg') no-repeat center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+}
+
 /* Header */
 
 header {
-  background-color: #0e69f8;
+  background-image: url('assets/images/header-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   gap: 30px;
   height: 100vh;
-  position: relative;
 }
 
 header div:first-child {
@@ -66,28 +205,6 @@ header div:first-child {
 header div:first-child h1 {
   font-size: 1.25em;
   color: white;
-}
-
-header div:first-child button {
-  font-size: 1em;
-  background-color: #1a3f9d;
-  border: none;
-  padding: 25px 50px;
-  border-radius: 5px;
-}
-
-header div:first-child button:hover {
-  background-color: white;
-  transition: 0.5s;
-}
-
-header div:first-child button a {
-  color: white;
-  text-decoration: none;
-}
-
-header div:first-child button:hover a {
-  color: #1a3f9d;
 }
 
 header div:nth-child(2) {
@@ -106,35 +223,10 @@ header div:nth-child(2) h2 {
   text-align: center;
 }
 
-header div:nth-child(2) button {
-  font-size: 1em;
-  background-color: #1a3f9d;
-  border: none;
-  padding: 25px 50px;
-  border-radius: 5px;
-}
-
-header div:nth-child(2) button:hover {
-  background-color: white;
-  transition: 0.5s;
-}
-
-header div:nth-child(2) button a {
-  color: white;
-  text-decoration: none;
-}
-
-header div:nth-child(2) button:hover a {
-  color: #1a3f9d;
-}
-
 header div:last-child {
   display: flex;
   justify-content: center;
-  position: absolute;
-  bottom: -45%;
-  left: 50%;
-  transform: translate(-50%);
+  margin-top: 4em;
 }
 
 header div:last-child img {
@@ -184,15 +276,16 @@ header div:last-child img {
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: rgb(0, 0, 0);
+  background-color: #000000;
   position: relative;
+  transition: 0.3s ease-in-out;
 }
 
 #demos-section > div:nth-child(2) > div > div > div {
   width: 100%;
   height: 100%;
   background-color: black;
-  filter: opacity(0.3);
+  filter: opacity(0);
   position: absolute;
   visibility: hidden;
   z-index: 1;
@@ -200,12 +293,12 @@ header div:last-child img {
 
 #demos-section > div:nth-child(2) > div > div:hover {
   transform: translateY(-5px);
-  transition: 0.4s;
 }
 
 #demos-section > div:nth-child(2) > div > div:hover > div {
   visibility: visible;
   transition: 0.6s;
+  filter: opacity(0.5);
 }
 
 #demos-section > div:nth-child(2) > div:first-child > div {
@@ -221,11 +314,6 @@ header div:last-child img {
 }
 
 #demos-section > div:nth-child(2) > div > div button {
-  font-size: 1em;
-  background-color: rgb(26, 63, 157);
-  border: none;
-  padding: 20px 50px;
-  border-radius: 5px;
   visibility: hidden;
   position: absolute;
   z-index: 2;
@@ -234,20 +322,6 @@ header div:last-child img {
 #demos-section > div:nth-child(2) > div:hover > div button {
   visibility: visible;
   transition: 0.7s;
-}
-
-#demos-section > div:nth-child(2) > div:hover > div button:hover {
-  background-color: white;
-  transition: 0.7s;
-}
-
-#demos-section > div:nth-child(2) > div > div button a {
-  color: white;
-  text-decoration: none;
-}
-
-#demos-section > div:nth-child(2) > div > div button:hover a {
-  color: #1a3f9d;
 }
 
 #demos-section > div:nth-child(2) > div > span {
@@ -299,26 +373,27 @@ header div:last-child img {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  transition: 0.2s ease-in-out;
 }
 
 #blogs-section > div:nth-child(2) > div > div > div {
   width: 100%;
   height: 100%;
   background-color: black;
-  filter: opacity(0.3);
   position: absolute;
   visibility: hidden;
   z-index: 1;
+  filter: opacity(0);
 }
 
 #blogs-section > div:nth-child(2) > div > div:hover > div {
   visibility: visible;
   transition: 0.6s;
+  filter: opacity(0.5);
 }
 
 #blogs-section > div:nth-child(2) > div > div:hover {
   transform: translateY(-8px);
-  transition: 0.4s;
 }
 
 #blogs-section > div:nth-child(2) > div:first-child > div {
@@ -330,11 +405,6 @@ header div:last-child img {
 }
 
 #blogs-section > div:nth-child(2) > div > div button {
-  font-size: 1em;
-  background-color: rgb(26, 63, 157);
-  border: none;
-  padding: 20px 50px;
-  border-radius: 5px;
   visibility: hidden;
   position: absolute;
   z-index: 2;
@@ -344,19 +414,6 @@ header div:last-child img {
   visibility: visible;
 }
 
-#blogs-section > div:nth-child(2) > div > div button:hover {
-  background-color: white;
-  transition: 0.6s;
-}
-
-#blogs-section > div:nth-child(2) > div > div button:hover a {
-  color: #1a3f9d;
-}
-
-#blogs-section > div:nth-child(2) > div > div button a {
-  color: white;
-  text-decoration: none;
-}
 #blogs-section > div:nth-child(2) > div > span {
   width: 100%;
   font-size: 1.3em;
@@ -367,7 +424,10 @@ header div:last-child img {
 
 #widgets-section {
   margin-top: 6em;
-  background-color: #0e69f8;
+  background-image: url('assets/images/header-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding: 8em 0;
 }
 
@@ -419,13 +479,20 @@ header div:last-child img {
 }
 
 #features-section > div:nth-child(2) > div {
-  background-color: gray;
-  height: 250px;
+  background-color: white;
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   padding: 10px;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  transition: 0.2s ease-in-out;
+}
+
+#features-section > div:nth-child(2) > div:hover {
+  transform: translateY(-6px);
 }
 
 #features-section > div:nth-child(2) > div h5 {
@@ -433,7 +500,8 @@ header div:last-child img {
 }
 
 #features-section > div:nth-child(2) > div p {
-  font-size: 1.3em;
+  font-size: 1.1em;
+  max-width: 80%;
   text-align: center;
 }
 
@@ -441,7 +509,10 @@ header div:last-child img {
 
 footer {
   margin-top: 20em;
-  background-color: #0e69f8;
+  background-image: url('assets/images/header-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 500px;
   display: flex;
   justify-content: center;
@@ -461,28 +532,6 @@ footer > div:first-child h3 {
   text-align: center;
   color: white;
   max-width: 90%;
-}
-
-footer > div > button {
-  font-size: 1em;
-  background-color: #1a3f9d;
-  border: none;
-  padding: 20px 50px;
-  border-radius: 5px;
-}
-
-footer > div > button:hover {
-  background-color: white;
-  transition: 0.6s;
-}
-
-footer > div button a {
-  color: white;
-  text-decoration: none;
-}
-
-footer > div button:hover a {
-  color: #1a3f9d;
 }
 
 #swoosh-up {
